Revision history for {{$dist->name}}

{{$NEXT}}

0.005     2014-11-02 05:44:51Z
          - avoid reporting false positives for core zilla attributes that
            were set at construction time (via root config or stash)

0.004     2014-11-01 08:47:41Z
          - fix tests that fail with Dist::Zilla 5.023 (changes to added_by
            semantics)
          - also check the execution order of -NameProvider, -LicenseProvider
            plugins and access time of the abstract, main_module, authors and
            prereqs attributes

0.003     2014-04-06 20:38:06Z
          - also check that -VersionProvider plugins do not run too soon

0.002     2014-03-04 06:37:37Z
          - avoid warning about late modifications to Makefile.PL and
            Build.PL, as this is normal and expected
          - also identify the original filename of a file that has been
            renamed
          - additional checks for files removed outside the pruning phase or
            added after the file gathering phase
          - additional checks for files having their encodings changed outside
            of the file gathering or encoding provider phase
          - at the start of the build, adjust the plugin order so we always
            run last in each phase

0.001     2014-02-23 05:11:23Z
          - Initial release.